Add curly brackets to list of characters that gn needs to escape

Curly brackets {} needs to be escaped to avoid brace expansion
on systems using bash as the default shell.

BUG=709934

Review-Url: https://codereview.chromium.org/2809633002
Cr-Commit-Position: refs/heads/master@{#466286}

Former-commit-id: 7fd3f6718896969f1a5d3850a6d81f4ccf74abd3